table formatting and callout color change

--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -131,7 +131,7 @@ treasury each epoch.
 Check with the vendor managing your staking pool for more detailed information about your staking
 pool's decision.
 
-:::warning As a Reminder
+:::caution As a Reminder
 
 **The Helium Foundation is neither responsible for nor manages the status of Validator staking
 pools.**
@@ -309,57 +309,21 @@ the 42 months until it reaches one veHNT and remains at one veHNT for six months
 The table below shows the approximate HNT to veHNT multiplier for each month of starting a stake or
 veHNT a stake has decayed. Delegating veHNT to a subDAO or veDNT staking decays at the same rates.
 
-| Months staked or decayed to | veHNT held |
-| :-------------------------: | :--------: |
-|              0              |    0.0     |
-|              1              |    0.17    |
-|              2              |    0.33    |
-|              3              |    0.50    |
-|              4              |    0.67    |
-|              5              |    0.83    |
-|              6              |    1.0     |
-|              7              |    3.4     |
-|              8              |    5.7     |
-|              9              |    8.1     |
-|             10              |    10.4    |
-|             11              |    12.8    |
-|             12              |    15.1    |
-|             13              |    17.5    |
-|             14              |    19.9    |
-|             15              |    22.2    |
-|             16              |    24.6    |
-|             17              |    26.9    |
-|             18              |    29.3    |
-|             19              |    31.6    |
-|             20              |    34.0    |
-|             21              |    36.4    |
-|             22              |    38.7    |
-|             23              |    41.1    |
-|             24              |    43.4    |
-|             25              |    45.8    |
-|             26              |    48.1    |
-|             27              |    50.5    |
-|             28              |    52.9    |
-|             29              |    55.2    |
-|             30              |    57.6    |
-|             31              |    59.9    |
-|             32              |    62.3    |
-|             33              |    64.6    |
-|             34              |    67.0    |
-|             35              |    69.4    |
-|             36              |    71.7    |
-|             37              |    74.1    |
-|             38              |    76.4    |
-|             39              |    78.8    |
-|             40              |    81.1    |
-|             41              |    83.5    |
-|             42              |    85.9    |
-|             43              |    88.2    |
-|             44              |    90.6    |
-|             45              |    92.9    |
-|             46              |    95.3    |
-|             47              |    97.6    |
-|             48              |    100     |
+| Months staked or decayed to | veHNT held |     | Months staked or decayed to | veHNT held |     | Months staked or decayed to | veHNT held |     | Months staked or decayed to | veHNT held |
+| :-------------------------: | :--------: | --- | :-------------------------: | :--------: | --- | :-------------------------: | :--------: | --- | :-------------------------: | :--------: |
+|              0              |    0.0     |     |                             |            |     |                             |            |     |                             |            |
+|              1              |    0.17    |     |             13              |    17.5    |     |             25              |    45.8    |     |             37              |    74.1    |
+|              2              |    0.33    |     |             14              |    19.9    |     |             26              |    48.1    |     |             38              |    76.4    |
+|              3              |    0.50    |     |             15              |    22.2    |     |             27              |    50.5    |     |             39              |    78.8    |
+|              4              |    0.67    |     |             16              |    24.6    |     |             28              |    52.9    |     |             40              |    81.1    |
+|              5              |    0.83    |     |             17              |    26.9    |     |             29              |    55.2    |     |             41              |    83.5    |
+|              6              |    1.0     |     |             18              |    29.3    |     |             30              |    57.6    |     |             42              |    85.9    |
+|              7              |    3.4     |     |             19              |    31.6    |     |             31              |    59.9    |     |             43              |    88.2    |
+|              8              |    5.7     |     |             20              |    34.0    |     |             32              |    62.3    |     |             44              |    90.6    |
+|              9              |    8.1     |     |             21              |    36.4    |     |             33              |    64.6    |     |             45              |    92.9    |
+|             10              |    10.4    |     |             22              |    38.7    |     |             34              |    67.0    |     |             46              |    95.3    |
+|             11              |    12.8    |     |             23              |    41.1    |     |             35              |    69.4    |     |             47              |    97.6    |
+|             12              |    15.1    |     |             24              |    43.4    |     |             36              |    71.7    |     |             48              |   100.0    |
 
 ### Can I Increase My Staking Period At Any Time?
 
